added  adaptive product-page

--- a/app/contact.html
+++ b/app/contact.html
@@ -16,105 +16,104 @@
 
 <body>
 
- <header class="header">
-   <div class=" container container--fluid">
-     <nav class="header__inner">
+  <header class="header">
+    <div class="container container--fluid">
+      <nav class="header__inner">
 
-       <a class="logo header__logo " href="index.html">
-         <img class="logo__img" src="images/logo.png" alt="logo">
-       </a>
+        <a class="logo header__logo" href="index.html">
+          <img class="logo__img" src="images/logo.png" alt="logo">
+        </a>
 
-       <ul class="header__menu-items">
+        <ul class="header__menu-items">
 
-         <li class="header__item">
-           <a class="header__menu-link " href="#">
-             Home
-           </a>
-         
-         </li>
+          <li class="header__item">
+            <a class="header__menu-link" href="#">
+              Home
+            </a>
+          </li>
 
-         <li class="header__item">
-           <a class="header__menu-link" href="about-us.html">
-             About
-           </a>
-         </li>
+          <li class="header__item">
+            <a class="header__menu-link" href="about-us.html">
+              About
+            </a>
+          </li>
 
-         <li class="header__item">
-           <a class="header__menu-link" href="#services">
-             Services
-           </a>
-         </li>
+          <li class="header__item">
+            <a class="header__menu-link" href="#services">
+              Services
+            </a>
+          </li>
 
-         <li class="header__item drop-menu">
-           <a class="header__menu-link" href="#">
-             Pages
-           </a>
+          <li class="header__item drop-menu">
+            <a class="header__menu-link" href="#">
+              Pages
+            </a>
 
-           <ul class="drop-menu__list">
-             <li class="drop-menu__item">
-               <a class="drop-menu__link" href="product-grid.html">Product-list</a>
-             </li>
-             <li class="drop-menu__item">
-               <a class="drop-menu__link" href="blog-list.html">Blog-list</a>
-             </li>
-             <li class="drop-menu__item">
-               <a class="drop-menu__link" href="login.html">Login</a>
-             </li>
-             <li class="drop-menu__item">
-               <a class="drop-menu__link" href="therms.html">Terms&Conditions</a>
-             </li>
-           </ul>
-         </li>
+            <ul class="drop-menu__list">
+              <li class="drop-menu__item">
+                <a class="drop-menu__link" href="product-grid.html">Product-list</a>
+              </li>
+              <li class="drop-menu__item">
+                <a class="drop-menu__link" href="blog-list.html">Blog-list</a>
+              </li>
+              <li class="drop-menu__item">
+                <a class="drop-menu__link" href="login.html">Login</a>
+              </li>
+              <li class="drop-menu__item">
+                <a class="drop-menu__link" href="therms.html">Terms&Conditions</a>
+              </li>
+            </ul>
+          </li>
 
-         <li class="header__item">
-           <a class="header__menu-link" href="#insights">
-             News
-           </a>
-         </li>
+          <li class="header__item">
+            <a class="header__menu-link" href="#insights">
+              News
+            </a>
+          </li>
 
-         <li class="header__item header__item--active">
-           <a class="header__menu-link" href="contact.html">
-             Contact
-           </a>
-         </li>
-       </ul>
+          <li class="header__item header__item--active">
+            <a class="header__menu-link" href="contact.html">
+              Contact
+            </a>
+          </li>
+        </ul>
 
-       <div class="header__user-nav user-nav">
+        <div class="header__user-nav user-nav">
 
-         <a class="user-nav__item user-nav__item--find" href="#">to find something
-           <svg class="user-nav__svg">
-             <use xlink:href="images/sprite.svg#icon-search"></use>
-           </svg>
-         </a>
+          <a class="user-nav__item user-nav__item--find" href="#">to find something
+            <svg class="user-nav__svg">
+              <use xlink:href="images/sprite.svg#icon-search"></use>
+            </svg>
+          </a>
 
-         <div class="user-nav__cabinet">
+          <div class="user-nav__cabinet">
 
-           <a class=" user-nav__item user-nav__item--heart" href="#">my favorite staff
-             <svg class="user-nav__svg">
-               <use xlink:href="images/sprite.svg#icon-heart"></use>
-             </svg>
+            <a class="user-nav__item user-nav__item--heart" href="#">my favorite staff
+              <svg class="user-nav__svg">
+                <use xlink:href="images/sprite.svg#icon-heart"></use>
+              </svg>
 
-             <span>0</span>
-           </a>
+              <span>0</span>
+            </a>
 
-           <a class=" user-nav__item user-nav__item--basket" href="#">my basket icon
-             <svg class="user-nav__svg">
-               <use xlink:href="images/sprite.svg#icon-basket"></use>
-             </svg>
+            <a class="user-nav__item user-nav__item--basket" href="#">my basket icon
+              <svg class="user-nav__svg">
+                <use xlink:href="images/sprite.svg#icon-basket"></use>
+              </svg>
 
-             <span>0</span>
-           </a>
-         </div>
+              <span>0</span>
+            </a>
+          </div>
 
-         <a class=" user-nav__item user-nav__item--menu" href="#">drop menu icon
-           <svg class="user-nav__svg user-nav__svg--color-white">
-             <use xlink:href="images/sprite.svg#icon-menu"></use>
-           </svg>
-         </a>
-       </div>
-     </nav>
-   </div>
- </header>
+          <a class="user-nav__item user-nav__item--menu" href="#">drop menu icon
+            <svg class="user-nav__svg user-nav__svg--color-white">
+              <use xlink:href="images/sprite.svg#icon-menu"></use>
+            </svg>
+          </a>
+        </div>
+      </nav>
+    </div>
+  </header>
 
   <div class="wrapper">
 
@@ -142,7 +141,7 @@
         <div class="container">
           <div class="contact__inner">
 
-            <h3 class="contact__title"> <span class="contact__uptitle">Write Here</span>Get In Touch</h3>
+            <h3 class="contact__title"><span class="contact__uptitle">Write Here</span>Get In Touch</h3>
 
             <address class="contact__items">
               <div class="contact__item">
@@ -161,7 +160,6 @@
                     Tampa, FL 33634
                   </p>
                 </div>
-
               </div>
 
               <div class="contact__item">
@@ -216,14 +214,15 @@
 
                 <div class="form-blog__row form-blog__row--contacts">
                   <label class="form-blog__label">
-                    <input class="form-blog__input form-blog__input--contacts" type="text" placeholder="Name">
+                    <input class="form-blog__input form-blog__input--contacts" type="text" placeholder="Name" required>
                     <svg class="form-blog__svg">
                       <use xlink:href="images/sprite.svg#icon-user"></use>
                     </svg>
                   </label>
 
                   <label class="form-blog__label">
-                    <input class="form-blog__input form-blog__input--contacts" type="email" placeholder="email">
+                    <input class="form-blog__input form-blog__input--contacts" type="email" placeholder="email"
+                      required>
                     <svg class="form-blog__svg">
                       <use xlink:href="images/sprite.svg#icon-mail"></use>
                     </svg>
@@ -231,7 +230,8 @@
                 </div>
 
                 <div class="form-blog__box">
-                  <textarea class="form-blog__textarea form-blog__textarea--contacts" placeholder="Comment"></textarea>
+                  <textarea class="form-blog__textarea form-blog__textarea--contacts" placeholder="Comment"
+                    required></textarea>
                   <svg class="form-blog__svg">
                     <use xlink:href="images/sprite.svg#icon-chat"></use>
                   </svg>
@@ -252,7 +252,7 @@
         </div>
       </section>
 
-      <section class="insights  insights--pt125 " id="insights">
+      <section class="insights  insights--pt125" id="insights">
         <div class="container">
           <div class="insights__top">
 
@@ -260,7 +260,7 @@
             <a href="blog-list.html" class="insights__top-link">View All</a>
           </div>
 
-          <div class="insights__inner ">
+          <div class="insights__inner">
 
             <article class="insights-card">
               <a class="insights-card__link" href="blog-list.html">
@@ -272,10 +272,7 @@
                 <span class="insights-card__label">news</span>
 
                 <div class="insights-card__text-box">
-                  <h3 class="insights-card__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad
-                    minim
-                    veniam</h3>
+                  <h3 class="insights-card__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h3>
                 </div>
 
                 <a class="insights-card__date" href="#">
@@ -298,11 +295,7 @@
                 <span class="insights-card__label">news</span>
 
                 <div class="insights-card__text-box">
-                  <h3 class="insights-card__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                    enim
-                    ad
-                    minim
-                    veniam</h3>
+                  <h3 class="insights-card__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h3>
                 </div>
 
                 <a class="insights-card__date" href="#">
@@ -326,9 +319,7 @@
 
                 <div class="insights-card__text-box">
                   <h3 class="insights-card__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad
-                    minim
-                    veniam</h3>
+                    enim ad minim veniam</h3>
                 </div>
 
                 <a class="insights-card__date" href="#">
@@ -346,6 +337,7 @@
         <div class="insights__companies">
           <div class="container">
             <ul class="insights__sponsors">
+
               <li class="insights__sponsor">
                 <img class="insights__sponsor-img" src="images/sponsors/sponsor1.png" alt="sponsor">
               </li>
@@ -373,13 +365,10 @@
               <li class="insights__sponsor">
                 <img class="insights__sponsor-img" src="images/sponsors/sponsor2.png" alt="sponsor">
               </li>
-
             </ul>
           </div>
         </div>
       </section>
-
-
 
     </main>
 
@@ -458,7 +447,6 @@
               </label>
               <button class="footer__btn" type="submit">Subscribe</button>
             </form>
-
           </div>
         </div>
 
@@ -474,8 +462,6 @@
       </div>
     </footer>
   </div>
-
-
 
   <script src="js/main.min.js"></script>
 
